# AM

./: .gitignore  Cargo.toml  README.md
artifacts/: review_archive_manifest.txt
artifacts/b06/: BUILD_REPORT_B06.md  b06_b0.json  b06_b1.json  b06_b2.json  b2_context_1200.txt
beval/corpus/: 002_stage_eta_w.json  004_stage_b01_test_count.json  (+13 more)
dashboard/: app.js  index.html  styles.css  test.html  test.js
docs/: AM_CORE_V0.md  AM_CORE_V0_AMENDMENTS.md  AM_ROADMAP_V2.md  AM_TRACK_B_ROADMAP.md  ARCHITECTURE_DRIFT_CHECK.md  BUILD_REPORT.md  BUILD_REPORT_NIGHT2.md  BUILD_REPORT_S02.md  BUILD_REPORT_S05.md  BUILD_REPORT_S06.md  CODEX_WORKPLAN.md  CODEX_WORKPLAN_B01.md  CODEX_WORKPLAN_S02.md  EVENT_GRAMMAR.md  OBSERVATION_SCHEMA.md  OLLAMA_SEAM.md  PERCEPT_AXIS_MAP.md  PERCEPT_SCHEMA.md  TRACK_B_README.md  W0_WORLD.md
review/: .gitignore  AM_B02_PROMPT.md  REVIEW_FILE_LIST.txt  demo_actions.txt
scripts/: make_review_archive.sh
src/: lib.rs
sweep/: grid.json  results.csv  results_s05_full_confirm.csv
tests/: a18_recent_ring.rs  beval_b02.rs  beval_b03.rs  cli_smoke.rs  completion.rs  contradiction.rs  dashboard_b05.rs  determinism.rs  diff_integrity.rs  drift_check.rs  forgetting.rs  inspect_snapshot.rs  link_decay_alive.rs  observation_schema.rs  parser_rule.rs  percept_determinism.rs  percept_pipe_determinism.rs  percept_validity.rs  reinforcement.rs  resting_field.rs  snapshot_roundtrip.rs  stale_rowref.rs  stale_w_links.rs  sweep_smoke.rs  track_b_extras.rs  world_cli_smoke.rs  world_golden_trace.rs  world_semantic_quarantine.rs  world_tier_flags.rs
(+149 files in other folders)
