[package]
name = "am001"
version = "0.0.1"
edition = "2021"

[lib]
name = "am001"
path = "src/lib.rs"

[[bin]]
name = "am"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
clap = { version = "4.5", features = ["derive"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.10"
pretty_assertions = "1.4"

